fix overlap of text on small screen

--- a/src/webapp/css/app.css
+++ b/src/webapp/css/app.css
@@ -17,6 +17,7 @@ ul.huge {
 .huge li {
     margin: 10px;
     padding: 20px;
+    line-height: 1;
 }
 
 .orange {
